      safe by now. If the driver is at all thread safe, allow SQLCancel to bipass the
      interlock.
    * Performance change to handle large numbers of connection and statement handles better.
      Thanks for the change from the folks at Acision.
    * Add -k option to isql to treat the DSN as a connection string and use SQLDriverConnect
        isql -k "DSN=server;UID=test;PWD=test"

20th-April-2010
2.3.0

	* Try and rationalise the way the connection process find the driver
	  version and supported functions
	* Sort out problem in isql with blank lines
	* Stop libthread from being used under AIX
	* Move the GUI parts off into a new project
		http://sourceforge.net/projects/unixodbc-gui-qt/
	* Strip out the GUI parts. I have also removed the spec files
	  as they will need redoing,
	* Move the Test parts off into a new project
		http://sourceforge.net/projects/unixodbc-test/
	* Add interface into odbcinstQ to allow for a dialog if SQLDriverConnect
	  is called without a DSN= (as the MS spec)
	* Allow the setting of a default Threading level in the ODBC section
          of odbcinst.ini
        * Change double format string in Postgre7.1 driver
	* Add missing CR to output of odbcinst
	* add fixes to MiniSQL driver
	* Add missing .y in nn driver, now I need to get it to work
    * Assoured bux fixes and format problems, thanks Tom
	* SQLBindCol on metadata calls was incorrectly going via the cursor lib if it 
	* fix isql problem with nested definitions.
	  was enabled
	* Add configure option to enable building of driver config libs
	* Shift build to using config.h, the compile lines were so big it was hard to 
	  see warnings
	* Fix bug in isql when using -b option.
    * Check attribute values when setting connection and statement attrs
    * Check for valid pointers in SQLGetInfo(W) and SQLGetFunctions
    * Add extra checks for states in SQLCopyDesc
    * Add --enable-stricterror option to allow compliance with the error reporting